# masp

./: Cargo.toml  README.md  signature
.github/workflows/: ci.yml
masp_note_encryption/: Cargo.toml
masp_note_encryption/src/: batch.rs  lib.rs
masp_primitives/: Cargo.toml
masp_primitives/proptest-regressions/: sapling.txt
masp_primitives/src/: asset_type.rs  consensus.rs  constants.rs  convert.rs  lib.rs  memo.rs  merkle_tree.rs  sapling.rs  transaction.rs  zip32.rs
masp_primitives/src/sapling/: group_hash.rs  keys.rs  note_encryption.rs  prover.rs  redjubjub.rs
masp_primitives/src/test_vectors/: note_encryption.rs  pedersen_hash_vectors.rs
masp_primitives/src/transaction/: builder.rs  components.rs  sighash.rs  sighash_v5.rs  txid.rs
masp_primitives/src/transaction/components/: amount.rs  sapling.rs  transparent.rs
masp_primitives/src/transaction/components/sapling/: builder.rs  fees.rs
masp_primitives/src/transaction/components/transparent/: builder.rs
masp_primitives/src/transaction/fees/: fixed.rs
masp_primitives/src/zip32/: sapling.rs
masp_proofs/: Cargo.toml
masp_proofs/benches/: sapling.rs
masp_proofs/src/: circuit.rs  constants.rs  lib.rs  prover.rs
masp_proofs/src/circuit/: convert.rs  ecc.rs  gadgets.rs  pedersen_hash.rs  sapling.rs
masp_proofs/src/sapling/: mod.rs  prover.rs  translation.rs  verifier.rs
masp_proofs/src/sapling/translation/: arkworks.rs  bellperpson.rs  zksync.rs
masp_proofs/src/sapling/verifier/: batch.rs  single.rs
